# crux

./: .gitignore  ARCHITECTURE-IMPROVEMENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PHASE3-PLAN.md  PLAN.md  README.ko.md  README.md
.claude/: settings.json
.claude/rules/: gpui-rendering.md  ipc-integration.md  platform-native.md  terminal-core.md
.github/workflows/: ci.yml
crates/crux-app/: Cargo.toml
crates/crux-app/src/: actions.rs  app.rs  ipc_dispatch.rs  main.rs
crates/crux-app/src/cli/: client.rs  commands.rs  mod.rs  output.rs
crates/crux-app/src/dock/: mod.rs  terminal_panel.rs
crates/crux-clipboard/: Cargo.toml
crates/crux-clipboard/src/: lib.rs  macos.rs
crates/crux-config/: Cargo.toml
crates/crux-config/src/: lib.rs  watcher.rs
crates/crux-graphics/: Cargo.toml
crates/crux-graphics/benches/: graphics_bench.rs
crates/crux-graphics/src/: error.rs  lib.rs  manager.rs  types.rs
crates/crux-graphics/src/protocol/: kitty.rs  mod.rs
crates/crux-ipc/: Cargo.toml
crates/crux-ipc/src/: client.rs  command.rs  command_tests.rs  handler.rs  lib.rs  server.rs  socket.rs
crates/crux-mcp/: Cargo.toml
crates/crux-mcp/src/: ipc_client.rs  main.rs  prompts.rs  resources.rs  server.rs
crates/crux-mcp/src/tools/: command.rs  content.rs  mod.rs  pane.rs  state.rs
crates/crux-mcp/src/tools/command/: common.rs  execute_command.rs  get_output.rs  mod.rs  send_keys.rs  send_text.rs  wait_for_output.rs
crates/crux-protocol/: Cargo.toml
crates/crux-protocol/benches/: protocol_bench.rs
crates/crux-protocol/src/: error_code.rs  framing.rs  lib.rs  method.rs  rpc.rs  types.rs
crates/crux-terminal/: Cargo.toml
crates/crux-terminal-view/: Cargo.toml
crates/crux-terminal-view/src/: clipboard_handler.rs  colors.rs  element.rs  ime_switch.rs  input.rs  keyboard.rs  kitty_encode.rs  lib.rs  mouse.rs  url_detector.rs  view.rs
crates/crux-terminal-view/tests/: ime_hardening.rs
crates/crux-terminal/benches/: terminal_bench.rs
crates/crux-terminal/src/: event.rs  graphics_scanner.rs  lib.rs  osc_scanner.rs  pty.rs  terminal.rs  traits.rs
extra/: crux.terminfo
extra/shell-integration/: crux.bash  crux.fish  crux.zsh
patches/gpui-component/src/dock/: stack_panel.rs  tab_panel.rs
patches/gpui-component/src/resizable/: mod.rs
patches/gpui/src/platform/mac/: window.rs
research/: README.md  gap-analysis.md
research/competitive/: alacritty-known-bugs.md  ghostty-known-bugs.md  ghostty-warp-analysis.md  iterm2-warp-known-bugs.md  rio-cross-terminal-known-bugs.md  terminal-structures.md  warp-settings-analysis.md  wezterm-kitty-known-bugs.md
research/core/: accessibility.md  config-system.md  font-system.md  graphics-protocols.md  hyperlinks.md  keymapping.md  mouse-reporting.md  performance.md  security.md  shell-integration.md  terminal-architecture.md  terminal-emulation.md  terminal-fundamentals-verification.md  terminal-resize-reflow.md  terminfo.md  testing-strategy.md  tmux-compatibility.md
research/gpui/: bootstrap.md  framework.md  terminal-implementations.md  widgets-integration.md
research/integration/: claude-code-strategy.md  ipc-external-patterns.md  ipc-protocol-design.md  mcp-integration.md  terminal-ime-ipc-research.md
research/platform/: homebrew-distribution.md  ime-clipboard.md  vim-ime-switching.md
research/testing/: ai-agent-testing.md
resources/: Info.plist  crux.icns
scripts/: generate-icon.sh
