[workspace]
resolver = "2"
members = [
    "crates/crux-app",
    "crates/crux-terminal",
    "crates/crux-terminal-view",
    "crates/crux-ipc",
    "crates/crux-clipboard",
    "crates/crux-protocol",
    "crates/crux-config",
    "crates/crux-graphics",
    "crates/crux-mcp",
]
default-members = ["crates/crux-app"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
# Internal crates
crux-terminal = { path = "crates/crux-terminal" }
crux-terminal-view = { path = "crates/crux-terminal-view" }
crux-ipc = { path = "crates/crux-ipc" }
crux-clipboard = { path = "crates/crux-clipboard" }
crux-protocol = { path = "crates/crux-protocol" }
crux-config = { path = "crates/crux-config" }
crux-graphics = { path = "crates/crux-graphics" }

# GPUI
gpui = "0.2.2"
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"

# Terminal core
alacritty_terminal = "0.25"
portable-pty = "0.9"

# MCP
rmcp = { version = "0.15", features = ["server", "macros", "transport-io", "transport-streamable-http-server"] }
schemars = "1"

# Unicode
unicode-normalization = "0.1"

# Utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
libc = "0.2"
shell-escape = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros"] }
clap = { version = "4", features = ["derive"] }

# Pin to avoid core-graphics version conflict with gpui's zed-font-kit
core-text = "=21.0.0"

[patch.crates-io]
gpui = { path = "patches/gpui" }
gpui-component = { path = "patches/gpui-component" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
