[package]
name = "crux-app"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "crux-app"
path = "src/main.rs"

[dependencies]
gpui.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true
crux-terminal-view.workspace = true
log.workspace = true
env_logger = "0.11"
core-text.workspace = true
