[package]
name = "crux-app"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "crux-app"
path = "src/main.rs"

[dependencies]
gpui.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true
crux-terminal-view.workspace = true
crux-clipboard.workspace = true
crux-protocol.workspace = true
crux-ipc.workspace = true
crux-config.workspace = true
log.workspace = true
env_logger.workspace = true
core-text.workspace = true
tokio.workspace = true
clap.workspace = true
serde_json.workspace = true
anyhow.workspace = true
libc.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = { version = "0.2", features = ["NSThread"] }
