[package]
name = "crux-clipboard"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
log.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = [
    "NSString",
    "NSArray",
    "NSData",
    "NSURL",
    "NSThread",
] }
objc2-app-kit = { version = "0.2", features = [
    "NSPasteboard",
    "NSImage",
] }
