[package]
name = "crux-graphics"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
doctest = false

[dependencies]
log.workspace = true
thiserror.workspace = true
serde.workspace = true
base64 = "0.22"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
base64 = "0.22"

[[bench]]
name = "graphics_bench"
harness = false
