[package]
name = "crux-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
crux-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
log.workspace = true
tokio.workspace = true
tokio-util = { version = "0.7", features = ["rt"] }
libc.workspace = true
