[package]
name = "crux-terminal-view"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
doctest = false

[dependencies]
gpui.workspace = true
crux-terminal.workspace = true
log.workspace = true

[dev-dependencies]
alacritty_terminal.workspace = true
