[package]
name = "crux-terminal-view"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
doctest = false

[dependencies]
gpui.workspace = true
crux-terminal.workspace = true
crux-clipboard.workspace = true
log.workspace = true
unicode-normalization.workspace = true
shell-escape.workspace = true
once_cell = "1"
regex = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = { version = "0.2", features = ["NSThread"] }

[dev-dependencies]
alacritty_terminal.workspace = true
