[package]
name = "crux-terminal"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
doctest = false

[dependencies]
alacritty_terminal.workspace = true
portable-pty.workspace = true
anyhow.workspace = true
log.workspace = true
libc.workspace = true
